--- a/Supervised_ML_Crop_Yield_Prediction.ipynb
+++ b/Supervised_ML_Crop_Yield_Prediction.ipynb
@@ -778,8 +778,8 @@
         "> - Number of Entries: The dataset consists of 28242 entries, ranging from index 0 to 28241.\n",
         "> - Columns: There are 8 columns in the dataset.\n",
         "> - Data Types:\n",
-        ">  - Most of the columns (6 out of 8) are of the int64 & float64 data type.\n",
-        ">  - Only the Item and Area columns are of the object data type.\n",
+        "    - Most of the columns (6 out of 8) are of the int64 & float64 data type.\n",
+        "    - Only the Item and Area columns are of the object data type.\n",
         "> - Missing Values: There doesn't appear to be any missing values in the dataset as each column has 28242 non-null entries."
       ]
     },
@@ -1069,15 +1069,15 @@
         "id": "LnUn8CfK84-r"
       },
       "source": [
-        "| Column         |              Description                                                           |\n",
-        "|----------------|-----------------------------------------------------------------------|\n",
-        "| **Area** |\tCountry names that plant crops\n",
-        "| **Item** | Types of crops planted\n",
-        "| **Year** |\tTime of planted crops in years 1990-2013\n",
-        "| **average_rain_fall_mm_per_year** |\tAverage rain fall per year\n",
-        "| **pesticides_tonnes** |\tPesticides used in tonnes\n",
-        "| **avg_temp** |\tAverage temperature\n",
-        "| **hg/ha_yield** |\tCrops yield production value in hectogram per hectare (Hg/Ha)"
+        "| Column                        | Description                                              |\n",
+        "|-------------------------------|----------------------------------------------------------|\n",
+        "| **Area**                      | Country names that plant crops                           |\n",
+        "| **Item**                      | Types of crops planted                                   |\n",
+        "| **Year**                      | Time of planted crops in years 1990-2013                 |\n",
+        "| **average_rain_fall_mm_per_year** | Average rainfall per year                             |\n",
+        "| **pesticides_tonnes**         | Pesticides used in tonnes                                |\n",
+        "| **avg_temp**                  | Average temperature                                      |\n",
+        "| **hg/ha_yield**               | Crops yield production value in hectogram per hectare   |\n"
       ]
     },
     {
