--- a/Supervised_ML_Crop_Yield_Prediction.ipynb
+++ b/Supervised_ML_Crop_Yield_Prediction.ipynb
@@ -1122,7 +1122,7 @@
         "        unique_values = data_frame[column].nunique()\n",
         "        print(f\"Column '{column}' has  unique value(s): {unique_values}\")\n",
         "\n",
-        "# Call the function with your DataFrame\n",
+        "\n",
         "unique_values(df)"
       ]
     },
@@ -3072,6 +3072,15 @@
       "source": [
         "df.head()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> Yes, one-hot encoding (OHE) for the 'Area' and 'Item' columns would be beneficial in this case. One-hot encoding is used to convert categorical variables into a binary matrix, making it easier for machine learning models to understand and process them."
+      ],
+      "metadata": {
+        "id": "Lgbj0g73DWTP"
+      }
     },
     {
       "cell_type": "markdown",
